Implement: visualization config

--- a/stock-market.ipynb
+++ b/stock-market.ipynb
@@ -22,6 +22,23 @@
     "from google.colab import drive\n",
     "import os"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 2: Visualization config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_style('whitegrid')\n",
+    "plt.rcParams['figure.figsize'] = (10, 6)"
+   ]
   }
  ],
  "metadata": {
