Implement: csv file

--- a/stock-market.ipynb
+++ b/stock-market.ipynb
@@ -39,6 +39,22 @@
     "sns.set_style('whitegrid')\n",
     "plt.rcParams['figure.figsize'] = (10, 6)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 3: defining variable and preparing csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_path = \"/content/synthetic_stock_data.csv\""
+   ]
   }
  ],
  "metadata": {
