Implement: duplicates handler

--- a/stock-market.ipynb
+++ b/stock-market.ipynb
@@ -116,6 +116,44 @@
     "    print(\"Por favor, asegúrate de haber subido el archivo 'synthetic_stock_data.csv' a tu sesión actual de Colab.\")\n",
     "    print(\"Puedes hacerlo usando el botón 'Subir archivo' en el panel de archivos de la izquierda.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 5: handling duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Manejo de Duplicados ---\n",
+    "print(\"\\nNúmero de Filas Duplicadas:\")\n",
+    "duplicates = df.duplicated().sum()\n",
+    "print(duplicates)\n",
+    "\n",
+    "if duplicates > 0:\n",
+    "    print(f\"\\nSe encontraron {duplicates} filas duplicadas. Eliminándolas.\")\n",
+    "    df.drop_duplicates(inplace=True)\n",
+    "    print(f\"Nuevas dimensiones del DataFrame: {df.shape}\")\n",
+    "else:\n",
+    "    print(\"\\nNo se encontraron filas duplicadas.\")\n",
+    "\n",
+    "# --- Corrección de Tipos de Datos ---\n",
+    "print(\"\\nVerificando y corrigiendo tipos de datos...\")\n",
+    "# Convertir 'Date' a datetime si no lo está ya\n",
+    "if not pd.api.types.is_datetime64_any_dtype(df['Date']):\n",
+    "    try:\n",
+    "        df['Date'] = pd.to_datetime(df['Date'])\n",
+    "        print(\"'Date' convertida a tipo datetime.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al convertir 'Date': {e}. Se mantendrá como objeto.\")\n",
+    "else:\n",
+    "    print(\"'Date' ya es de tipo datetime.\")"
+   ]
   }
  ],
  "metadata": {
