Implement: univariate analysis

--- a/stock-market.ipynb
+++ b/stock-market.ipynb
@@ -154,6 +154,115 @@
     "else:\n",
     "    print(\"'Date' ya es de tipo datetime.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 6: Univariate analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==================================================\n",
+    "# 2. Análisis Univariado\n",
+    "# ==================================================\n",
+    "print(\"\\n----- 2. Análisis Univariado -----\")\n",
+    "\n",
+    "# Identificar columnas numéricas y categóricas (RE-IDENTIFICAR después de limpieza/corrección)\n",
+    "numeric_cols = df.select_dtypes(include=np.number).columns.tolist()\n",
+    "categorical_cols = df.select_dtypes(include='object').columns.tolist()\n",
+    "date_col = 'Date' # Definir explícitamente\n",
+    "# Asegurarse de no incluir columnas no deseadas si su tipo cambió\n",
+    "if 'Year' in numeric_cols: numeric_cols.remove('Year') # Si se crearon en una ejecución previa\n",
+    "if 'Month' in numeric_cols: numeric_cols.remove('Month')\n",
+    "if 'Day' in numeric_cols: numeric_cols.remove('Day')\n",
+    "if 'DayOfWeek' in numeric_cols: numeric_cols.remove('DayOfWeek')\n",
+    "\n",
+    "print(f\"\\nColumnas Numéricas para Análisis Univariado: {numeric_cols}\")\n",
+    "print(f\"Columnas Categóricas para Análisis Univariado: {categorical_cols}\")\n",
+    "\n",
+    "# --- Variables Numéricas ---\n",
+    "print(\"\\nAnálisis de Variables Numéricas:\")\n",
+    "\n",
+    "for col in numeric_cols:\n",
+    "    print(f\"\\n--- Análisis de '{col}' ---\")\n",
+    "    if df[col].isnull().any():\n",
+    "        print(f\"Advertencia: La columna '{col}' contiene valores NaN. Las estadísticas pueden verse afectadas.\")\n",
+    "        # Considera df[col].dropna().skew() o .kurt() si quieres estadísticas sin NaNs\n",
+    "        skewness = \"N/A (contiene NaN)\"\n",
+    "        kurtosis = \"N/A (contiene NaN)\"\n",
+    "    else:\n",
+    "        skewness = f\"{df[col].skew():.2f}\"\n",
+    "        kurtosis = f\"{df[col].kurt():.2f}\"\n",
+    "\n",
+    "    print(f\"Media: {df[col].mean():.2f}\")\n",
+    "    print(f\"Mediana: {df[col].median():.2f}\")\n",
+    "    print(f\"Desviación Estándar: {df[col].std():.2f}\")\n",
+    "    print(f\"Mínimo: {df[col].min():.2f}\")\n",
+    "    print(f\"Máximo: {df[col].max():.2f}\")\n",
+    "    Q1 = df[col].quantile(0.25)\n",
+    "    Q3 = df[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    print(f\"Q1: {Q1:.2f}\")\n",
+    "    print(f\"Q3: {Q3:.2f}\")\n",
+    "    print(f\"IQR (Rango Intercuartílico): {IQR:.2f}\")\n",
+    "    print(f\"Asimetría (Skewness): {skewness}\")\n",
+    "    print(f\"Curtosis: {kurtosis}\")\n",
+    "\n",
+    "    # Visualización: Histograma y Boxplot\n",
+    "    plt.figure(figsize=(12, 5))\n",
+    "\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    # Usar dropna() para evitar errores en el plot si hay NaNs\n",
+    "    sns.histplot(df[col].dropna(), kde=True)\n",
+    "    plt.title(f'Distribución de {col}')\n",
+    "    plt.xlabel(col)\n",
+    "    plt.ylabel('Frecuencia')\n",
+    "\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    sns.boxplot(y=df[col].dropna()) # Usar dropna() aquí también\n",
+    "    plt.title(f'Boxplot de {col}')\n",
+    "    plt.ylabel(col)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# --- Variables Categóricas ---\n",
+    "print(\"\\nAnálisis de Variables Categóricas:\")\n",
+    "\n",
+    "for col in categorical_cols:\n",
+    "    print(f\"\\n--- Análisis de '{col}' ---\")\n",
+    "\n",
+    "    # Frecuencias y Proporciones\n",
+    "    print(\"Conteo de Valores:\")\n",
+    "    value_counts = df[col].value_counts()\n",
+    "    print(value_counts)\n",
+    "    print(\"\\nProporción de Valores (%):\")\n",
+    "    print(value_counts.div(value_counts.sum()).mul(100).round(2).astype(str) + '%')\n",
+    "\n",
+    "    # Visualización: Gráfico de Barras (si no hay demasiadas categorías)\n",
+    "    num_unique = df[col].nunique()\n",
+    "    print(f\"Número de categorías únicas: {num_unique}\")\n",
+    "    if num_unique > 0 and num_unique < 30: # Umbral arbitrario y evitar error si columna está vacía\n",
+    "        plt.figure(figsize=(10, max(5, num_unique * 0.3))) # Ajustar altura dinámicamente\n",
+    "        sns.countplot(y=df[col], order = value_counts.index, palette='viridis')\n",
+    "        plt.title(f'Frecuencia de Categorías en {col}')\n",
+    "        plt.xlabel('Conteo')\n",
+    "        plt.ylabel(col)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "    elif num_unique >= 30:\n",
+    "        print(f\"No se genera gráfico de barras para '{col}' debido a la alta cardinalidad ({num_unique} categorías).\")\n",
+    "        print(\"Top 10 categorías:\")\n",
+    "        print(value_counts.head(10))\n",
+    "    else:\n",
+    "         print(f\"La columna '{col}' no tiene valores o categorías únicas para graficar.\")"
+   ]
   }
  ],
  "metadata": {
