Implement: bivariate analysis

--- a/stock-market.ipynb
+++ b/stock-market.ipynb
@@ -263,6 +263,140 @@
     "    else:\n",
     "         print(f\"La columna '{col}' no tiene valores o categorías únicas para graficar.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 7: Bivariate analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==================================================\n",
+    "# 3. Análisis Bivariado\n",
+    "# ==================================================\n",
+    "print(\"\\n----- 3. Análisis Bivariado -----\")\n",
+    "\n",
+    "# --- Numérica vs. Numérica ---\n",
+    "print(\"\\nAnálisis Numérica vs. Numérica:\")\n",
+    "\n",
+    "# Matriz de correlación y Mapa de calor\n",
+    "print(\"\\nMatriz de Correlación:\")\n",
+    "# Seleccionar solo columnas numéricas que existen en el df actual\n",
+    "existing_numeric_cols = [col for col in numeric_cols if col in df.columns]\n",
+    "if existing_numeric_cols:\n",
+    "    correlation_matrix = df[existing_numeric_cols].corr()\n",
+    "    print(correlation_matrix)\n",
+    "\n",
+    "    print(\"\\nMapa de Calor de Correlación:\")\n",
+    "    plt.figure(figsize=(12, 10))\n",
+    "    sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".2f\", linewidths=.5, annot_kws={\"size\": 8})\n",
+    "    plt.title('Mapa de Calor de Correlación entre Variables Numéricas')\n",
+    "    plt.xticks(rotation=45, ha='right')\n",
+    "    plt.yticks(rotation=0)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"No se encontraron columnas numéricas para calcular la correlación.\")\n",
+    "\n",
+    "\n",
+    "# Diagramas de dispersión (Seleccionar pares relevantes)\n",
+    "print(\"\\nDiagramas de Dispersión (Ejemplos):\")\n",
+    "# Verificar si las columnas existen antes de intentar plotear\n",
+    "scatter_pairs = [('Open', 'Close'), ('Volume', 'Volatility'), ('PE_Ratio', 'Dividend_Yield')]\n",
+    "plt.figure(figsize=(18, 6))\n",
+    "plot_index = 1\n",
+    "for x_col, y_col in scatter_pairs:\n",
+    "    if x_col in df.columns and y_col in df.columns:\n",
+    "        plt.subplot(1, len(scatter_pairs), plot_index)\n",
+    "        sns.scatterplot(data=df, x=x_col, y=y_col, alpha=0.5)\n",
+    "        plt.title(f'{x_col} vs {y_col}')\n",
+    "        plot_index += 1\n",
+    "    else:\n",
+    "        print(f\"Advertencia: No se pueden plotear '{x_col}' vs '{y_col}' (una o ambas columnas faltan).\")\n",
+    "if plot_index > 1: # Solo mostrar si se ploteó algo\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"No se pudieron generar diagramas de dispersión de ejemplo.\")\n",
+    "\n",
+    "\n",
+    "# --- Categórica vs. Categórica ---\n",
+    "print(\"\\nAnálisis Categórica vs. Categórica:\")\n",
+    "\n",
+    "# Ejemplo: Sector vs Trend\n",
+    "if 'Sector' in categorical_cols and 'Trend' in categorical_cols:\n",
+    "    print(\"\\nTabla de Contingencia: Sector vs Trend\")\n",
+    "    try:\n",
+    "        crosstab_st = pd.crosstab(df['Sector'], df['Trend'])\n",
+    "        print(crosstab_st)\n",
+    "\n",
+    "        # Gráfico de barras agrupadas\n",
+    "        crosstab_st.plot(kind='bar', figsize=(12, 7), rot=45)\n",
+    "        plt.title('Distribución de Trend por Sector')\n",
+    "        plt.xlabel('Sector')\n",
+    "        plt.ylabel('Conteo')\n",
+    "        plt.legend(title='Trend')\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "\n",
+    "        # Prueba Chi-cuadrado (opcional)\n",
+    "        try:\n",
+    "            chi2, p, dof, expected = stats.chi2_contingency(crosstab_st)\n",
+    "            print(f\"\\nPrueba Chi-cuadrado (Sector vs Trend): Chi2={chi2:.2f}, p-value={p:.3f}\")\n",
+    "            if p < 0.05:\n",
+    "                print(\"Hay evidencia de una asociación significativa entre Sector y Trend (p < 0.05).\")\n",
+    "            else:\n",
+    "                print(\"No hay evidencia suficiente de una asociación significativa entre Sector y Trend (p >= 0.05).\")\n",
+    "        except ValueError as ve:\n",
+    "             print(f\"No se pudo realizar la prueba Chi-cuadrado (posiblemente por ceros en tabla): {ve}\")\n",
+    "        except Exception as e:\n",
+    "             print(f\"Error inesperado en la prueba Chi-cuadrado: {e}\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al generar la tabla de contingencia Sector vs Trend: {e}\")\n",
+    "else:\n",
+    "    print(\"No se encontraron las columnas 'Sector' y/o 'Trend' para el análisis Categórico-Categórico.\")\n",
+    "\n",
+    "\n",
+    "# --- Numérica vs. Categórica ---\n",
+    "print(\"\\nAnálisis Numérica vs. Categórica:\")\n",
+    "\n",
+    "# Ejemplo: Close vs Sector\n",
+    "if 'Sector' in categorical_cols and 'Close' in existing_numeric_cols:\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    # Ordenar por mediana para mejor visualización\n",
+    "    order = df.groupby('Sector')['Close'].median().sort_values().index\n",
+    "    sns.boxplot(data=df, x='Sector', y='Close', order=order, palette='viridis')\n",
+    "    plt.title('Distribución de Close por Sector (Ordenado por Mediana)')\n",
+    "    plt.xticks(rotation=45, ha='right')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "    print(\"\\nEstadísticas Descriptivas de 'Close' Agrupadas por 'Sector':\")\n",
+    "    print(df.groupby('Sector')['Close'].describe())\n",
+    "else:\n",
+    "     print(\"No se encontraron las columnas 'Sector' y/o 'Close' para el análisis Numérico-Categórico.\")\n",
+    "\n",
+    "\n",
+    "# Ejemplo: Sentiment_Score vs Trend\n",
+    "if 'Trend' in categorical_cols and 'Sentiment_Score' in existing_numeric_cols:\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    sns.violinplot(data=df, x='Trend', y='Sentiment_Score', palette='muted', inner='quartile') # Mostrar cuartiles\n",
+    "    plt.title('Distribución de Sentiment_Score por Trend')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "    print(\"\\nEstadísticas Descriptivas de 'Sentiment_Score' Agrupadas por 'Trend':\")\n",
+    "    print(df.groupby('Trend')['Sentiment_Score'].describe())\n",
+    "else:\n",
+    "     print(\"No se encontraron las columnas 'Trend' y/o 'Sentiment_Score' para el análisis Numérico-Categórico.\")"
+   ]
   }
  ],
  "metadata": {
