Implement: outliers handler

--- a/stock-market.ipynb
+++ b/stock-market.ipynb
@@ -397,6 +397,78 @@
     "else:\n",
     "     print(\"No se encontraron las columnas 'Trend' y/o 'Sentiment_Score' para el análisis Numérico-Categórico.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 8: Outliers handler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==================================================\n",
+    "# 4. Identificación y Manejo de Outliers (Más a fondo)\n",
+    "# ==================================================\n",
+    "print(\"\\n----- 4. Identificación y Manejo de Outliers -----\")\n",
+    "\n",
+    "print(\"\\nIdentificación de Outliers usando el método IQR:\")\n",
+    "# Revisaremos algunas columnas clave como ejemplo\n",
+    "outlier_check_cols = ['Close', 'Volume', 'PE_Ratio', 'Volatility', 'Sentiment_Score', 'Market_Cap', 'Dividend_Yield']\n",
+    "outlier_summary = {}\n",
+    "\n",
+    "for col in outlier_check_cols:\n",
+    "    if col in df.columns and pd.api.types.is_numeric_dtype(df[col]) and not df[col].isnull().all():\n",
+    "        Q1 = df[col].quantile(0.25)\n",
+    "        Q3 = df[col].quantile(0.75)\n",
+    "        IQR = Q3 - Q1\n",
+    "        lower_bound = Q1 - 1.5 * IQR\n",
+    "        upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "        # Evitar errores si IQR es 0\n",
+    "        if IQR > 0:\n",
+    "            outliers = df[(df[col] < lower_bound) | (df[col] > upper_bound)]\n",
+    "            outlier_count = outliers.shape[0]\n",
+    "            percentage = (outlier_count / df[col].notna().sum()) * 100 if df[col].notna().sum() > 0 else 0\n",
+    "            outlier_summary[col] = {'count': outlier_count, 'percentage': percentage}\n",
+    "\n",
+    "            print(f\"\\nOutliers en '{col}': {outlier_count} ({percentage:.2f}%)\")\n",
+    "            print(f\"  Límites (1.5*IQR): Inferior={lower_bound:.2f}, Superior={upper_bound:.2f}\")\n",
+    "            if outlier_count > 0 and outlier_count < 15: # Mostrar algunos si no son demasiados\n",
+    "                 print(\"  Algunos ejemplos de outliers:\")\n",
+    "                 # Intentar mostrar Date si existe y es datetime\n",
+    "                 cols_to_show = [col for col in [date_col,'Company', col] if col in outliers.columns]\n",
+    "                 print(outliers[cols_to_show].head())\n",
+    "            elif outlier_count >= 15:\n",
+    "                 print(f\"  Se encontraron {outlier_count} outliers, no se muestran ejemplos por brevedad.\")\n",
+    "                 print(f\"  Valor Mínimo Outlier (si existe < lower): {outliers[outliers[col] < lower_bound][col].min() if any(outliers[col] < lower_bound) else 'N/A'}\")\n",
+    "                 print(f\"  Valor Máximo Outlier (si existe > upper): {outliers[outliers[col] > upper_bound][col].max() if any(outliers[col] > upper_bound) else 'N/A'}\")\n",
+    "\n",
+    "        else:\n",
+    "            print(f\"\\n'{col}': IQR es 0, no se pueden calcular límites basados en IQR.\")\n",
+    "            outlier_summary[col] = {'count': 0, 'percentage': 0.0}\n",
+    "    elif col not in df.columns:\n",
+    "         print(f\"\\nAdvertencia: La columna '{col}' no existe en el DataFrame.\")\n",
+    "    elif not pd.api.types.is_numeric_dtype(df[col]):\n",
+    "         print(f\"\\nAdvertencia: La columna '{col}' no es numérica.\")\n",
+    "    else: # Es numérica pero todos son NaN\n",
+    "         print(f\"\\nAdvertencia: La columna '{col}' solo contiene valores NaN.\")\n",
+    "\n",
+    "\n",
+    "print(\"\\nResumen de Outliers (método 1.5*IQR):\")\n",
+    "for col, data in outlier_summary.items():\n",
+    "    print(f\"- {col}: {data['count']} outliers ({data['percentage']:.2f}%)\")\n",
+    "\n",
+    "\n",
+    "print(\"\\nNota sobre el manejo de outliers:\")\n",
+    "print(\"El tratamiento de outliers (eliminación, transformación, capping, uso de modelos robustos)\")\n",
+    "print(\"depende críticamente del contexto del análisis, del dominio del problema y del objetivo final (ej: modelado).\")\n",
+    "print(\"En este EDA inicial, solo los identificamos. Los boxplots del análisis univariado también ayudan a visualizarlos.\")"
+   ]
   }
  ],
  "metadata": {
